--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -127,12 +127,12 @@
                         <h:commandLink action="#{reporteListas.renderMedicamentos()}" >  
                             <p:graphicImage value="/resources/images/pdf.png" />                          
                         </h:commandLink>
-                        #{''}
+                        <!--
                         <h:commandLink >  
                             <p:graphicImage value="/resources/images/xls1.png" />  
                             <p:dataExporter type="xls" target="tablaMedicamentos" fileName="medicamentos"/>  
                         </h:commandLink>
-                    </p:panel>
+                    </p:panel>-->
                 </h:panelGrid>
             </h:form>
         </ui:define>
