--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -15,53 +15,52 @@
                     </div> 
                 </div>   
             </div>  
-
         </ui:define>
-
-        <ui:define name="content">           
-            <!--Metadato que se realiza antes de renderizarse la vista-->
-            <f:metadata>
-                <f:viewParam name="pacienteId" value="#{RecetaHome.pacienteId}" />
-                <f:viewParam name="consultaMedicaId" value="#{Receta.consultaMedicaId}" />
-                <f:viewParam name="backView" value="#{fichaMedicaHome.backView}" />
-            </f:metadata>
+        <!--Metadato que se realiza antes de renderizarse la vista-->
+        <f:metadata>
+            <f:viewParam name="result" value="#{recetaListaServicio.primerResult}" />
+            <f:viewParam name="" value="#{recetaListaServicio.parametroBusqueda}" />
+            <f:viewParam name="" value="#{recetaListaServicio.fechaI}" />
+            <f:viewParam name="" value="#{recetaListaServicio.fechaF}" />
+        </f:metadata>
+        <ui:define name="content-pre" >
+            <h:form id="form1">
+                <h:panelGroup style="margin-top: -15px;">
+                    <p:calendar value="#{recetaListaServicio.fechaI}" pattern="yyyy-MM-dd" title="fecha Inicio"  >
+                        <p:ajax event="dateSelect"/>
+                    </p:calendar>
+                    <p:calendar value="#{recetaListaServicio.fechaF}" pattern="yyyy-MM-dd" title="fecha fin" style="width: 20%">
+                        <p:ajax event="dateSelect"/>  <!-- rendered="buscar1" update="buscar1"-->
+                    </p:calendar>
+                    &nbsp;
+                    <p:commandButton id="buscar1" value="Buscar" action="#{recetaListaServicio.buscarPorFechas()}" immediate="true" 
+                                     update=":form:tablaRecetas"/>
+                    <p:commandButton id="buscar" value="Buscar Todos" action="#{recetaListaServicio.buscarTodos()}" immediate="true" 
+                                     update=":form:tablaRecetas"/>
+                </h:panelGroup>
+            </h:form>
+        </ui:define>
+        <ui:define name="content">                       
             <!--Formulario dentro de un contenedor-->
-            <h:form id="form">            
-                <!--Opción de mensaje, cuando se realiza una acción dfghdh-->
+            <h:form id="form">                            
                 <!--para mostrar mensaje de componentes seleccionados y errores si fuera el caso-->
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
 
                 <!--Botones de admin-->
-                <div class="admin-actions">                    
-                        <!--<h:link value="#{messages['common.add']}" rendered="#{true}" outcome="receta" styleClass="btn primary">
-                            <f:param name="pacienteId"></f:param>
-                            <f:param name="backView" value="lista"></f:param>
-                        </h:link>
-                    #{' '}
-                    <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="medicamento" styleClass="btn" 
-                            disabled="#{empty recetaListaServicio.recetaSeleccionada }">
-                        <f:param name="recetaId" value="#{recetaListaServicio.recetaSeleccionada.id}"></f:param>
-                        <f:param name="backView" value="lista"></f:param>
-                    </h:link>-->
+                <div class="admin-actions">                                           
                     <p:commandButton id="button-edit" value="#{messages['receta.entrega']}" styleClass="btn primary"
                                      onclick="#{'editDlg.show();'}" ajax="true" disabled="#{empty recetaListaServicio.recetaSeleccionada}">
                         <p:ajax process="@this" update=":edit-dialog"/>
                     </p:commandButton>
                     &nbsp;&nbsp;
-                    <p:commandButton id="button-print" value="#{messages['common.print']}" styleClass="btn primary" action="#{reporteReceta.renderReceta()}" 
-                                   disabled="#{empty recetaListaServicio.recetaSeleccionada}" rendered="true">
-                        <f:param name="medicaciones" value="#{recetaListaServicio.recetaSeleccionada.medicaciones}" rendered="true"/>
-                        <f:param name="indicaciones" value="#{recetaListaServicio.recetaSeleccionada.indicaciones}" rendered="true"/>
-                        <f:param name="nombres" value="#{recetaListaServicio.recetaSeleccionada.paciente.nombres}" rendered="true"/>
-                        <f:param name="apellidos" value="#{recetaListaServicio.recetaSeleccionada.paciente.apellidos}" rendered="true"/>
-                        <f:param name="recetaId" value="#{recetaListaServicio.recetaSeleccionada.id}" rendered="true"/>
-                        <f:param name="numReceta" value="#{recetaListaServicio.recetaSeleccionada.numvalue}" rendered="true"/>
-                        <f:param name="fechaE" value="#{recetaListaServicio.recetaSeleccionada.fechaEntrega}" rendered="true"/>
-                    </p:commandButton>
+                    <h:commandLink id="button-print" value="#{messages['common.print']}" styleClass="btn primary" action="#{reporteReceta.renderReceta()}" 
+                                     disabled="#{empty recetaListaServicio.recetaSeleccionada}" >                       
+                        <f:setPropertyActionListener value="#{recetaListaServicio.recetaSeleccionada}" target="#{reporteReceta.receta}"/>
+                    </h:commandLink>
 
-                    <div style="float: right" >
+                    <div style="float: right; " >
                         <p:inputText id="criterioBuscar" size ="25" value="#{recetaListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda">
-                            <p:ajax event="keyup" update="tablaRecetas"/>
+                            <p:ajax event="keyup" update="tablaRecetas" listener="#{recetaListaServicio.buscarPorParametro()}"/>
                         </p:inputText>
                         &nbsp;
                         <p:commandButton value="Buscar" action="#{recetaListaServicio.buscarPorParametro()}" update="tablaRecetas" styleClass="btn info"/>                    
@@ -86,7 +85,7 @@
                             <h:outputText value="#{messages['receta.numero']}" />  
                         </f:facet>  
                         <h:outputText value="#{receta_.numvalue}" />
-                        
+
                     </p:column>
                     <p:column sortBy="#{receta_.paciente.nombres}" style="text-align: center;">
                         <f:facet name="header">  
@@ -96,7 +95,7 @@
                         &nbsp;&nbsp;
                         <h:outputText value="#{receta_.paciente.apellidos}" />
                     </p:column>
-                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center; width: 12%">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
@@ -104,41 +103,51 @@
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                        
                     </p:column>                   
+                    <p:column sortBy="#{receta_.fechaEntrega}" style="text-align: center; width: 12%">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['fechaReceta.fechaEntrega']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{receta_.fechaEntrega}" >
+                            <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
+                        </h:outputText>                        
+                    </p:column>
                     <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{messages['receta.responsableEmision']}" />  
+                            <h:outputText value="R. Emisión" title="#{messages['receta.responsableEmision']}" />  
                         </f:facet>                         
                         <h:outputText value="#{receta_.responsableEmision.fullName}" />                            
                     </p:column>
 
                     <p:column sortBy="#{receta_.responsableEntrega}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{messages['receta.responsableEntrega']}" />  
+                            <h:outputText  value="R. Entrega"  title="#{messages['receta.responsableEntrega']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.responsableEntrega.fullName}" />                        
                     </p:column>
-                    <p:column sortBy="#{receta_.estado}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.estado}" style="text-align: center; width: 6%">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['comun.estado']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.estado}" />
                     </p:column>                    
                 </p:dataTable>
-                
+
                 <h:panelGrid id="export" class="columns" >
-                <p:panel>
-                    <h:outputText value="Exportar Datos" />  
-                    <br/>
-                    <h:commandLink action="#{reporteListas.renderRecetas()}" >                    
-                        <p:graphicImage value="/resources/images/pdf.png" />                          
-                    </h:commandLink>
-                    #{''}
-                    <h:commandLink >  
-                        <p:graphicImage value="/resources/images/xls1.png" />  
-                        <p:dataExporter type="xls" target="tablaRecetas" fileName="Recetas"/>  
-                    </h:commandLink>
-                </p:panel>
-            </h:panelGrid>
+                    <p:panel>
+                        <h:outputText value="Exportar Datos" />  
+                        <br/>
+                        <h:commandLink action="#{reporteListas.renderRecetas()}" >                    
+                            <p:graphicImage value="/resources/images/pdf.png" />                          
+                            <f:setPropertyActionListener value="#{recetaListaServicio.fechaI}" target="#{reporteListas.fechaInf}"/>
+                            <f:setPropertyActionListener value="#{recetaListaServicio.fechaF}" target="#{reporteListas.fechaSup}"/>
+                        </h:commandLink>
+                        <!--#{''}
+                        <h:commandLink >  
+                            <p:graphicImage value="/resources/images/xls1.png" />  
+                            <p:dataExporter type="xls" target="tablaRecetas" fileName="Recetas"/>  
+                        </h:commandLink>-->
+                    </p:panel>
+                </h:panelGrid>
             </h:form>
             <p:dialog id="edit-dialog" appendToBody="true" header="#{messages['receta.entrega']} #{messages['receta.nombre']} " 
                       widgetVar="editDlg" modal="true" resizable="true" dynamic="true" width="70%">
@@ -175,8 +184,8 @@
                         </p:panel>
                     </p:panelGrid>                    
                     <div class="admin-actions">
-                        <p:commandButton value="#{messages['comun.terminar']}" oncomplete="editDlg.hide();"                                           
-                                         action="#{recetaListaServicio.entregarReceta()}" update=":form"                                         
+                         <p:commandButton value="#{messages['comun.terminar']}" oncomplete="editDlg.hide();"                                           
+                                         action="#{recetaListaServicio.entregarReceta()}" update=":form:tablaRecetas"  
                                          immediate="true" 
                                          style="margin: 0 0 0 30%">  
                                         <!--recetaListaServicio.entregarReceta()--> 
