--- a/src/main/webapp/pages/paciente/consultas.xhtml
+++ b/src/main/webapp/pages/paciente/consultas.xhtml
@@ -86,15 +86,17 @@
                         <p:column headerText="#{messages['consultaMedica.diagnostico']}" style="width: 20%">
                             <h:outputText value="#{consultaO_.diagnostico}" styleClass="span3"/>
                         </p:column>                                                                                       
-                        <p:column headerText="#{messages['tratamiento.Label']}" style="width: 30%">
-                            <ui:repeat value="#{consultasPacienteHome.buscarPorConsulta(consultaO_)}" var="t">
-                                <h:outputText value="#{t.diente.nombre} #{t.diente.posicion}"/>
+                        <!--<p:column headerText="#{messages['tratamiento.Label']}" style="width: 30%">
+                            
+                            <ui:repeat value="# {consultasPacienteHome.buscarPorConsulta(consultaO_)}" var="t">
+                                <h:outputText value="# {t.diente.nombre} # {t.diente.posicion}"/>
                                 &nbsp;&nbsp;&nbsp;
-                                <h:outputText value="#{t.nombre}"/>
+                                <h:outputText value="# {t.nombre}"/>
                                 &nbsp;&nbsp;&nbsp;
-                                <h:outputText value="#{t.fechaRealizacion}"/>
+                                <h:outputText value="# {t.fechaRealizacion}"/>
+                                <br/>
                             </ui:repeat>
-                        </p:column>                        
+                        </p:column>     -->                   
                     </p:dataTable>
                 </p:panel>
             </h:form>            
