--- a/src/main/webapp/resources/ocpcommon/gravatar.xhtml
+++ b/src/main/webapp/resources/ocpcommon/gravatar.xhtml
@@ -44,7 +44,7 @@
 
 <composite:implementation>
 	<h:panelGroup style="#{cc.attrs.style}">
-		<h:outputLink value="http://gravatar.com/emails/" 
+		<h:outputLink value="https://www.gmail.com" 
 			title="Change your avatar at gravatar.com &#160;&#187;&#160;" 
 			target="_blank"
 			style="margin: 0px; padding: 0px; #{cc.attrs.style}; background-color: #ddd;"
